✨ Integrate group info / policy modify endpoint
