# docs/swagger.json
@@ -536,51 +536,6 @@
                 }
             }
         },
-        "/group/policy/{id}": {
-            "put": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Group"
-                ],
-                "summary": "Modify Group Policy",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "group id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "modifyGroupPolicyReq",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/groupctrl.modifyGroupPolicyReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/groupctrl.modifyGroupPolicyRes"
-                        }
-                    }
-                }
-            }
-        },
         "/group/quit/{id}": {
             "delete": {
                 "security": [
@@ -706,12 +661,12 @@
                         "required": true
                     },
                     {
-                        "description": "modifyGroupInfoReq",
+                        "description": "modifyGroupReq",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/groupctrl.modifyGroupInfoReq"
+                            "$ref": "#/definitions/groupctrl.modifyGroupReq"
                         }
                     }
                 ],
@@ -719,7 +674,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/groupctrl.modifyGroupInfoRes"
+                            "$ref": "#/definitions/groupctrl.groupDTO"
                         }
                     }
                 }
@@ -2054,71 +2009,30 @@
                 }
             }
         },
-        "groupctrl.modifyGroupInfoReq": {
+        "groupctrl.modifyGroupReq": {
             "type": "object",
             "required": [
-                "name"
+                "invite_policy",
+                "name",
+                "reveal_policy"
             ],
             "properties": {
                 "description": {
                     "type": "string",
                     "example": "description between 0 and 100"
                 },
+                "invite_policy": {
+                    "type": "integer",
+                    "maximum": 2,
+                    "minimum": 0
+                },
                 "name": {
                     "type": "string",
                     "example": "name between 3 and 30"
-                }
-            }
-        },
-        "groupctrl.modifyGroupInfoRes": {
-            "type": "object",
-            "required": [
-                "description",
-                "id",
-                "name"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "groupctrl.modifyGroupPolicyReq": {
-            "type": "object",
-            "required": [
-                "invite_policy",
-                "reveal_policy"
-            ],
-            "properties": {
-                "invite_policy": {
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 0
-                },
-                "reveal_policy": {
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 0
-                }
-            }
-        },
-        "groupctrl.modifyGroupPolicyRes": {
-            "type": "object",
-            "required": [
-                "invite_policy",
-                "reveal_policy"
-            ],
-            "properties": {
-                "invite_policy": {
-                    "type": "integer",
-                    "maximum": 2,
-                    "minimum": 0
+                "nickname_policy": {
+                    "type": "string",
+                    "example": "nickname_policy between 0 and 50"
                 },
                 "reveal_policy": {
                     "type": "integer",
